Optimizaciones: Particionado y optimización de SparkSession